# pretty-timeit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
ptimeit/: __init__.py  helpers.py  ptimeit.py  timethis.py
tests/: test_helpers.py  test_timethis.py
timethis/: timethis.py
