[tool.poetry]
name = "ptimeit"
version = "0.1.0"
description = "Pretty timeit."
authors = ["Abhinav Omprakash"]
license="BSD-3-Clause"
readme="README.md"
homepage="https://github.com/AbhinavOmprakash/p-timeit"
repository="https://github.com/AbhinavOmprakash/p-timeit"
keywords=["Timer", "timeit"]
include=[
    "LICENSE",
]
packages = [
    {include = "ptimeit"}
]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
coverage = "^5.5"
black = "^21.5b1"
blacken-docs = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
